# circom_flutter

./: README.md  pubspec.yaml
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/flutter/: generated_plugins.cmake
ios/: circom_flutter.podspec
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
